Fix image size on mobile, add discord links

--- a/_sass/basically-basic/_intro.scss
+++ b/_sass/basically-basic/_intro.scss
@@ -10,7 +10,7 @@
 
 .intro-image {
   position: relative;
-  margin-top: -20rem;
+  margin-top: -3rem;
   margin-bottom: 3rem;
 
   -webkit-box-shadow: 0px 0px 20px 0.5px #999;
