--- a/_sass/basically-basic/_navigation.scss
+++ b/_sass/basically-basic/_navigation.scss
@@ -2,16 +2,22 @@
    Navigation
    ========================================================================== */
 
+.landing-buttons {
+  display: flex;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
 .facebook-button {
   width: 100%;
   padding: 20px;
   text-align: center;
-  margin: 0 auto;
+  margin: 10px;
   display: inline-block;
   background-color: #0b233f;
   border-radius: 20px;
   color: white;
-  font-size: 30px;
+  font-size: 15px;
   text-decoration: none;
   -webkit-box-shadow: 0px 0px 20px 0.5px #999;
   box-shadow: 0px 0px 20px 0.5px #999;
